--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -2,15 +2,19 @@
 version: '3.1'
 services:
   jenkins:
+    hostname: jenkins
     container_name: jenkins
-    image: jenkins/jenkins:lts
+    build:
+      context: .
+      dockerfile: Dockerfile
     ports:
       - "8080:8080"
       - "50000:50000"
     volumes:
-      - jenkins-data:/var/jenkins_home
+      - ./jenkins:/var/jenkins_home
+      - ./jenkins.yaml:/var/jenkins_home/casc_configs/jenkins.yaml
+      - ./secrets.txt:/var/jenkins_home/secrets/secrets.txt
     environment:
       JENKINS_OPTS: --httpPort=8080
       JENKINS_HOME: /var/jenkins_home
-volumes:
-  jenkins-data:
+      CASC_JENKINS_CONFIG: /var/jenkins_home/casc_configs
