--- a/jenkins/casc_configs/jenkins.yaml
+++ b/jenkins/casc_configs/jenkins.yaml
@@ -14,21 +14,16 @@ credentials:
   system:
     domainCredentials:
       - credentials:
-        - string:
+        - usernamePassword:
             scope: GLOBAL
-            id: "CONFLUENT_CLOUD_API_KEY"
-            secret: "${CONFLUENT_CLOUD_API_KEY}"
-        - string:
-            scope: GLOBAL
-            id: "CONFLUENT_CLOUD_API_SECRET"
-            secret: "${CONFLUENT_CLOUD_API_SECRET}"
+            id: "confluent-cloud-creds"
+            username: "${CONFLUENT_CLOUD_API_KEY}"
+            password: "${CONFLUENT_CLOUD_API_SECRET}"
+            description: "Confluent Cloud 'Cloud API Key & Secret' for Terraform/APIs"
 
 jobs: 
   - file: /var/jenkins_home/groovy_jobs/tf-jobs.groovy
   - file: /var/jenkins_home/groovy_jobs/app-jobs.groovy
-  # - file: /var/jenkins_home/groovy_jobs/branch-main.groovy
-  # - file: /var/jenkins_home/groovy_jobs/branch-rel-2.0.0.groovy
-  # - file: /var/jenkins_home/groovy_jobs/branch-rel-1.0.0.groovy
 
 tool:
   git:
